[package]
name = "kucoin_orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures-util = "0.3"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
rand = "0.8"
url = "2.2"